--- a/app-office/msoffice-web/files/word.desktop
+++ b/app-office/msoffice-web/files/word.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Microsoft Word
-Comment=Lancer Microsoft Word
+Comment=Launch Microsoft Word
 Icon=ms-word
 Exec=xdg-open https://office.com/launch/word
 NoDisplay=false
