--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
+---
 name: Overlay QA
-
-on:
+on:  # yamllint disable-line rule:truthy
   push:
-
+    branch: [main]
 jobs:
   repoman:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: hacking-gentoo/action-repoman@master
+      - uses: actions/checkout@master
+      - uses: hacking-gentoo/action-repoman@master
