CI: Run pkgcheck

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,3 +12,4 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: Woomymy/action-run-repoman@main
+      - uses: Woomymy/action-run-pkgcheck@main
