--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: Woomymy/action-run-repoman@main
+  
+  pkgcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
       - uses: Woomymy/action-run-pkgcheck@main
