--- a/.github/workflows/euscan.yml
+++ b/.github/workflows/euscan.yml
@@ -11,8 +11,6 @@ jobs:
     # Image already contains portage tree
     container:
       image: ghcr.io/woomymy/docker-euscan:main
-      volumes:
-        - /github/workspace:/github/workspace
     outputs:
       matrix: ${{ steps.matrix.outputs.matrix }}
     steps:
@@ -23,8 +21,6 @@ jobs:
       - uses: Woomymy/action-run-euscan@main
       - name: Find new versions
         run: bash .github/workflows/proceed-reports.sh
-      - name: List files
-        run: ls -R
       - name: Generate Matrix
         id: matrix
         run: .github/workflows/generate-matrix.sh
@@ -40,15 +36,15 @@ jobs:
       - name: Change branch
         run: |
           git branch ${{ matrix.packages.name }}
-      - name: Fetch update
+      - name: Download generated ebuild and Manifest
         run: |
           wget -O update.zip ${{ matrix.packages.upload_url }}
           yes | unzip -o update.zip
           rm update.zip
       - name: Commit changes
         run: |
-          git config --global user.name OverlayBot
-          git config --global user.email no-reply@woomy.ovh
+          git config --global user.name Woomy-Overlay-Action
+          git config --global user.email ${{ github.actor }}@users.noreply.github.com
           git add -A
           git commit -m "Bump ${{ matrix.packages.name }} to ${{ matrix.packages.version }}"
           git checkout master
