--- a/.github/workflows/euscan.yml
+++ b/.github/workflows/euscan.yml
@@ -47,7 +47,7 @@ jobs:
           git config --global user.name Woomy-Overlay-Action
           git config --global user.email ${{ github.actor }}@users.noreply.github.com
           git add -A
-          git commit -m "Bump ${{ matrix.packages.name }} to ${{ matrix.packages.version }}"
+          git commit -sm "${{ matrix.packages.name }}: Update to ${{ matrix.packages.version }}"
           git checkout master
       - name: Create pull request
         uses: peter-evans/create-pull-request@v3
