CI: Also count deletions
* Send the whole package as zip to count removed files

Signed-off-by: Woomymy <github@woomy.ovh>

--- a/.github/workflows/euscan.yml
+++ b/.github/workflows/euscan.yml
@@ -39,6 +39,7 @@ jobs:
           git branch ${{ matrix.packages.name }}
       - name: Download generated ebuild and Manifest
         run: |
+          rm -rf ${{ matrix.packages.name }}
           wget -O update.zip ${{ matrix.packages.upload_url }}
           yes | unzip -o update.zip
           rm update.zip
