--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,10 +1,19 @@
 masters = gentoo
 
+manifest-hashes = BLAKE2B SHA512
+manifest-required-hashes = BLAKE2B
+update-changelog = false
+
+
 # Use thin manifests
 thin-manifests = true
 sign-manifests = false
+sign-commits = true
 
 cache-formats = md5-dict
+
+# Let's start with new EAPIs if possible
+eapis-banned = 0 1 2 3 4 5 6
 
 # Support package.* directories as well as files
 profile-formats = portage-2 
