ci/qa: Switch to 'main'
Signed-off-by: Woomymy <woomy@woomy.be>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@
 name: Overlay QA
 on:  # yamllint disable-line rule:truthy
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   pkgcheck:
